// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edits organization affiliation correctly: Test team 3 selected option 1`] = `
<span
  class="ant-select-selection-item"
  title="Test Team 3"
>
  <span
    class="ant-select-selection-item-content"
  >
    Test Team 3
  </span>
  <span
    aria-hidden="true"
    class="ant-select-selection-item-remove"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close"
      class="anticon anticon-close"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: available options 1`] = `
<div
  aria-selected="true"
  class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
  title="Test Team 3"
>
  <div
    class="ant-select-item-option-content"
  >
    Test Team 3
  </div>
  <span
    aria-hidden="true"
    class="ant-select-item-option-state"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="check"
      class="anticon anticon-check"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Edits organization affiliation correctly: available options 2`] = `
<div
  aria-selected="true"
  class="ant-select-item ant-select-item-option ant-select-item-option-selected"
  title="Test Team 4"
>
  <div
    class="ant-select-item-option-content"
  >
    Test Team 4
  </div>
  <span
    aria-hidden="true"
    class="ant-select-item-option-state"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="check"
      class="anticon anticon-check"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Edits organization affiliation correctly: available options 3`] = `
<div
  aria-selected="false"
  class="ant-select-item ant-select-item-option"
  title="Test Team 5"
>
  <div
    class="ant-select-item-option-content"
  >
    Test Team 5
  </div>
</div>
`;

exports[`Edits organization affiliation correctly: available options 4`] = `
<div
  aria-selected="false"
  class="ant-select-item ant-select-item-option"
  title="Test Team 5"
>
  <div
    class="ant-select-item-option-content"
  >
    Test Team 5
  </div>
</div>
`;

exports[`Edits organization affiliation correctly: available options 5`] = `
<div
  aria-selected="false"
  class="ant-select-item ant-select-item-option"
  title="Voidsingers"
>
  <div
    class="ant-select-item-option-content"
  >
    Voidsingers
  </div>
</div>
`;

exports[`Edits organization affiliation correctly: available options after filter 1`] = `
<div
  aria-selected="false"
  class="ant-select-item ant-select-item-option ant-select-item-option-active"
  title="Voidsingers"
>
  <div
    class="ant-select-item-option-content"
  >
    Voidsingers
  </div>
</div>
`;

exports[`Edits organization affiliation correctly: default selected item 1`] = `
<span
  class="ant-select-selection-item-content"
>
  Test Team 3
</span>
`;

exports[`Edits organization affiliation correctly: default selected item 2`] = `
<span
  class="ant-select-selection-item-content"
>
  Test Team 4
</span>
`;

exports[`Edits organization affiliation correctly: first row containing ona office loc details 1`] = `
<td
  class="ant-table-cell"
>
  Ona Office Sub Location
</td>
`;

exports[`Edits organization affiliation correctly: first row containing ona office loc details 2`] = `
<td
  class="ant-table-cell"
>
  Test Team 3, Test Team 4
</td>
`;

exports[`Edits organization affiliation correctly: first row containing ona office loc details 3`] = `
<td
  class="ant-table-cell"
>
  <button
    class="ant-btn ant-btn-link action-button"
    type="button"
  >
    <span>
      Edit
    </span>
  </button>
</td>
`;

exports[`Edits organization affiliation correctly: user defined root location 1`] = `
<span
  title="Ona Office Sub Location"
>
  Ona Office Sub Location
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expand 1`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Ona Office Sub Location"
  >
    Ona Office Sub Location
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expand 2`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Level 0"
  >
    Level 0
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expand 3`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Arundel mobile clinic"
  >
    Arundel mobile clinic
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expand 4`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Part Of Sub Location"
  >
    Part Of Sub Location
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 1`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Ona Office Sub Location"
  >
    Ona Office Sub Location
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 2`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Level 0"
  >
    Level 0
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 3`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Arundel mobile clinic"
  >
    Arundel mobile clinic
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 4`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Part Of Sub Location"
  >
    Part Of Sub Location
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 5`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Nairobii"
  >
    Nairobii
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 6`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Sub Loc"
  >
    Test Sub Loc
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 7`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Loc 113"
  >
    Test Loc 113
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 8`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Loc 1145"
  >
    Test Loc 1145
  </span>
</span>
`;

exports[`Edits organization affiliation correctly: visible nodes on expanding part of sub location 9`] = `
<span
  class="ant-tree-title"
>
  <span
    title="MOH HQ 2"
  >
    MOH HQ 2
  </span>
</span>
`;
